# testovoe

./: .dockerignore  .env.copy  .env.db.copy  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
migrations/: env.py
migrations/versions/: 2025_10_14_1332-629abe4f0c51_init_tables.py
src/: main.py
src/api/: __init__.py  dto.py  exceptions.py  schemas.py
src/api/admin/: categories.py  posts.py  schemas.py  users.py
src/api/middlewares/: exceptions.py  get_jwt_token_user.py
src/api/permissions/: exceptions.py  is_admin.py  is_authenticated.py
src/api/public/: auth.py  categories.py  health.py  posts.py  users.py
src/application/: exceptions.py
src/application/use_cases/: base.py  dto.py
src/application/use_cases/auth/: dto.py  login.py  me.py  refresh.py  register.py
src/application/use_cases/categories/: create.py  list_posts.py  update.py
src/application/use_cases/common/: create.py  delete.py  list.py  partial_update.py  retrieve.py  update.py
src/application/use_cases/posts/: create.py  retrieve.py  update.py
src/application/use_cases/users/: dto.py  list.py  retrieve.py  update_user.py
src/common/: dto.py
src/config/: app_factory.py  containers.py  exceptions.py  settings.py  uptrace.py
src/domain/entities/: category.py  entity.py  model.py  post.py  user.py
src/domain/validators/: __init__.py  base.py
src/infrastructure/managers/: dto.py  jwt_manager.py  paginator.py
src/infrastructure/middleware/: sanitize_html.py
src/infrastructure/models/alchemy/: __init__.py  base.py
src/infrastructure/repositories/alchemy/: __init__.py  base.py  categories.py  db.py  posts.py  users.py
src/infrastructure/repositories/interfaces/: __init__.py  base.py  category.py  post.py  user.py
src/infrastructure/uow/: __init__.py  alchemy.py  base.py
src/tests/: conftest.py  utils.py
src/tests/e2e/base/: test_auth.py
src/tests/integration/use_cases/: params.py
